Fix button alignment in Chrome < 86

--- a/client/jetpack-cloud/sections/settings/advanced-credentials/credentials-form/style.scss
+++ b/client/jetpack-cloud/sections/settings/advanced-credentials/credentials-form/style.scss
@@ -29,7 +29,7 @@
 		}
 	}
 
-	&__buttons {
+	&__buttons .credentials-form__buttons_flex {
 		display: flex;
 		flex-direction: row;
 		align-items: center;
